modules/cli/src/test/resources/good/liveness/Test01.scr
module good.liveness.Test01;


global protocol Proto1(role A, role B, role C, role D)
{
	choice at A
	{
		1() from A to B;
		2() from B to A;
	}
	or
	{
		2() from A to B;
		3() from B to A;
	}
	rec X  // Testing terminal set building
	{
		4() from C to D;
		continue X;
	}
}


